k8s/calc-micro/calc-micro_service-base.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-micro-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: calc-micro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc-micro-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calc-micro
  template:
    metadata:
      labels:
        app: calc-micro
    spec:
      containers:
      - name: calc-micro
        image: {registryname}/calc-micro:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
        - name: regcred
