k8s/calc-micro/calc-micro_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calc-micro-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    name: calc-micro-ingress
spec:
  rules:
  - host: www.micromicroservice.net
    http:
      paths:
      - path: /math/api
        pathType: Prefix
        backend:
          service:
            name: calc-micro-service
            port: 
              number: 80
